--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   intl: ^0.20.2
   flutter:
     sdk: flutter
+  flutter_spinkit: ^5.1.0
+  table_calendar: ^3.2.0
+  uuid: ^4.4.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,7 +42,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  intl: ^0.20.2
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
