--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   table_calendar: ^3.2.0
   uuid: ^4.4.2
   http: ^1.4.0
+  geolocator: ^14.0.0
+  flutter_local_notifications: ^19.2.0
+  workmanager: ^0.5.2
+  permission_handler: ^12.0.0+1
+  shared_preferences: ^2.5.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
