--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   workmanager: ^0.5.2
   permission_handler: ^12.0.0+1
   shared_preferences: ^2.5.3
+  dio: ^5.8.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
