--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -13,6 +13,8 @@
 		<string>사용자의 현재 위치는 사용자 근처의 정보를 가져오는데 반드시 필요합니다!</string>
 		<key>NSLocationAlwaysUsageDescription</key>
 		<string>사용자의 현재 위치는 사용자 근처의 정보를 가져오는데 반드시 필요합니다!</string>
+		<key>NSUserNotificationAlertUsageDescription</key>
+        <string>러닝 알림을 보내기 위해 알림 권한이 필요합니다.</string>
     <key>NSAppTransportSecurity</key>
 	<dict>
 	    <key>NSAllowsArbitraryLoads</key>
