--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,17 @@ dependencies:
   http: ^1.4.0
   geolocator: ^14.0.0
   flutter_local_notifications: ^19.2.0
-  workmanager: ^0.5.2
+  workmanager:
+    git:
+      url: https://github.com/fluttercommunity/flutter_workmanager.git
+      path: workmanager
+      ref: main
   permission_handler: ^12.0.0+1
   shared_preferences: ^2.5.3
   dio: ^5.8.0+1
+  flutter_secure_storage: ^9.2.4
+  webview_flutter: ^4.11.0
+  url_launcher: ^6.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
