--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   webview_flutter: ^4.11.0
   url_launcher: ^6.3.1
+  kakao_map_plugin: ^0.3.6
+  flutter_dotenv: ^5.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
