--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -15,6 +15,8 @@
 		<string>사용자의 현재 위치는 사용자 근처의 정보를 가져오는데 반드시 필요합니다!</string>
 		<key>NSUserNotificationAlertUsageDescription</key>
         <string>러닝 알림을 보내기 위해 알림 권한이 필요합니다.</string>
+       <key>NSLocalNetworkUsageDescription</key>
+       <string>디버깅과 테스트를 위해 로컬 네트워크 사용이 필요합니다.</string>
     <key>NSAppTransportSecurity</key>
 	<dict>
 	    <key>NSAllowsArbitraryLoads</key>
