--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   url_launcher: ^6.3.1
   kakao_map_plugin: ^0.3.6
   flutter_dotenv: ^5.2.1
+  timezone: ^0.10.1
+  web_socket_channel: ^3.0.3
+  image_picker: ^1.1.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
