--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   timezone: ^0.10.1
   web_socket_channel: ^3.0.3
   image_picker: ^1.1.2
+  google_generative_ai: ^0.4.7
+  flutter_tts: ^4.2.2
+  pedometer: ^4.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
