--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   google_generative_ai: ^0.4.7
   flutter_tts: ^4.2.2
   pedometer: ^4.1.1
+  path: ^1.9.1
 
 
   # The following adds the Cupertino Icons font to your application.
