--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   flutter_tts: ^4.2.2
   pedometer: ^4.1.1
   path: ^1.9.1
+  path_provider: ^2.1.5
+
 
 
   # The following adds the Cupertino Icons font to your application.
