--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   kakao_map_plugin: ^0.3.6
   flutter_dotenv: ^5.2.1
   timezone: ^0.10.1
+  wakelock_plus: ^1.3.2
   web_socket_channel: ^3.0.3
   image_picker: ^1.1.2
   google_generative_ai: ^0.4.7
