--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+<key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>kakaokompassauth</string>
+        <string>storykompassauth</string>
+        <string>kakaolink</string>
+        <string>kakaotalk</string>
+    </array>
+    <key>NSMotionUsageDescription</key>
+    <string>러닝 기록을 위해 동작 및 피트니스 데이터를 사용합니다.</string>
 <key>NSPhotoLibraryUsageDescription</key>
 	<string>This app required NSPhotoLibraryUsageDescription permission</string>
 	<key>NSCameraUsageDescription</key>
